--- a/source/css/pattern-scaffolding.css
+++ b/source/css/pattern-scaffolding.css
@@ -3,6 +3,10 @@
  * styles for grids, animations, color swatches, etc.
  * These styles will not be your production CSS.
  */
+.pl .body {
+    padding: .5rem;
+}
+
 #sg-patterns {
   -webkit-box-sizing: border-box !important;
   box-sizing: border-box !important;
