--- a/source/_meta/_01-foot.twig
+++ b/source/_meta/_01-foot.twig
@@ -1,6 +1,6 @@
-  
+
   <!--DO NOT REMOVE-->
   {{ patternLabFoot | raw }}
-  
+  <script src="../../js/main.bundle.js?{{ cacheBuster }}" />
   </body>
 </html>
