Hook map component into patterns

--- a/source/_patterns/03-cells/00-global/00-header.twig
+++ b/source/_patterns/03-cells/00-global/00-header.twig
@@ -1,5 +1,5 @@
 <!-- Begin .header -->
-<header class="header flex items-center bg-cyan-500 text-white p-4" role="banner">
+<header class="header flex items-center bg-cyan-500 text-white px-4 h-screen-6" role="banner">
 	{% set logo %}
 	{% include "@atoms/04-images/00-logo.twig" with {
 		"classes": [
@@ -17,7 +17,7 @@
 	} %}
 	{% include "@atoms/02-text/_link.twig" with {
 		"url": "#",
-		"content": "Transportation System Plan",
+		"content": "Streets",
 		"classes": [
 			"border-0",
 			"mr-3"
