Add responsize type scale

--- a/source/_patterns/00-particles/typography/01-fonts.scss
+++ b/source/_patterns/00-particles/typography/01-fonts.scss
@@ -1,6 +1,36 @@
 /* Google Fonts */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,700,800');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,700,800");
 
 body {
-    @apply font-sans text-xl text-black;
+  @apply font-sans text-base text-black;
+}
+
+@screen md {
+  body {
+    @apply text-xl;
+  }
+}
+
+//  Remove following after tailwind 1.1: https://github.com/tailwindcss/tailwindcss/pull/964
+.sr-only {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border-width: 0 !important;
+}
+
+.not-sr-only {
+  position: static !important;
+  width: auto !important;
+  height: auto !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  overflow: visible !important;
+  clip: auto !important;
+  white-space: normal !important;
 }
