--- a/source/_patterns/00-particles/typography/00-headings.scss
+++ b/source/_patterns/00-particles/typography/00-headings.scss
@@ -1,23 +1,49 @@
-h1 { 
+h1 {
+  @apply text-4xl mb-6;
+}
+
+h2 {
+  @apply text-3xl mb-5;
+}
+
+h3 {
+  @apply text-2xl mb-4;
+}
+
+h4 {
+  @apply text-xl mb-3;
+}
+
+h5 {
+  @apply text-lg mb-2;
+}
+
+h6 {
+  @apply text-base mb-1;
+}
+
+@screen md {
+  h1 {
     @apply text-6xl mb-6;
-}
+  }
 
-h2 { 
+  h2 {
     @apply text-5xl mb-5;
-}
+  }
 
-h3 { 
+  h3 {
     @apply text-4xl mb-4;
-}
+  }
 
-h4 { 
+  h4 {
     @apply text-3xl mb-3;
-}
+  }
 
-h5 { 
+  h5 {
     @apply text-2xl mb-2;
-}
+  }
 
-h6 { 
+  h6 {
     @apply text-xl mb-1;
+  }
 }
