--- a/source/_patterns/03-cells/address/address-result.twig
+++ b/source/_patterns/03-cells/address/address-result.twig
@@ -1,7 +1,7 @@
 {% for candidate in candidates %}
-  <div role="button" href="#" class="-mx-2 p-2 border-2 rounded-lg sm:flex sm:flex-row cursor-pointer">
+  <div role="button" href="#" class="p-2 border-2 flex flex-wrap cursor-pointer hover:bg-blue-100">
     {% if candidate.attributes.type %}
-      <span class="flex-initial rounded-full bg-blue-500 text-white uppercase px-2 py-1 text-xs font-bold mx-2">{{ candidate.attributes.type }}</span>
+      <span class="flex items-center flex-initial rounded-full bg-blue-500 text-white uppercase px-2 py-1 text-xs font-bold mx-2">{{ candidate.attributes.type }}</span>
     {% endif %}
     <div class="mx-2">{{ candidate.address }}</div>
     {% if candidate.attributes.city %}
