--- a/source/_patterns/00-particles/typography/00-headings.scss
+++ b/source/_patterns/00-particles/typography/00-headings.scss
@@ -24,26 +24,26 @@ h6 {
 
 @screen md {
   h1 {
-    @apply text-6xl mb-6;
+    @apply text-5xl mb-6;
   }
 
   h2 {
-    @apply text-5xl mb-5;
+    @apply text-4xl mb-5;
   }
 
   h3 {
-    @apply text-4xl mb-4;
+    @apply text-3xl mb-4;
   }
 
   h4 {
-    @apply text-3xl mb-3;
+    @apply text-2xl mb-3;
   }
 
   h5 {
-    @apply text-2xl mb-2;
+    @apply text-xl mb-2;
   }
 
   h6 {
-    @apply text-xl mb-1;
+    @apply text-lg mb-1;
   }
 }
