--- a/source/_patterns/01-atoms/04-images/00-logo.twig
+++ b/source/_patterns/01-atoms/04-images/00-logo.twig
@@ -1,10 +1,15 @@
 <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+{% set classes = classes|default([
+	"w-48"
+]) %}
 <svg version="1.1" id="Primary_w_x2F__Text_0_0_0_85_copy"
 	 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 243.2 90"
      style="enable-background:new 0 0 243.2 90;" xml:space="preserve"
-     class=" {{ classes|join(' ') }}">
+     class="{{ classes|join(' ') }}">
 <style type="text/css">
-	.st0{fill:currentColor;}
+            .st0 {
+                fill: currentColor;
+            }
 </style>
 <g>
 	<g>
@@ -14,7 +19,12 @@
 				c-4.4-2.7-11.1-4-20.2-4H60.2v66.8h26c7.9,0,14.1-1.7,18.6-5.2c4.6-3.5,6.8-8.3,6.8-14.3c0-4.1-0.9-7.4-2.8-10
 				C107,38.5,104,36.7,99.8,35.6z M78.2,17.5h5.1c5.7,0,8.5,1.9,8.5,5.6c0,2.1-0.7,3.7-2.1,4.8c-1.4,1.1-3.4,1.6-6,1.6h-5.4V17.5z
 				 M84.5,56.7h-6.4v-14h6c2.9,0,5,0.6,6.6,1.8c1.5,1.2,2.3,2.9,2.3,5.1C93,54.3,90.2,56.7,84.5,56.7z"/>
-			<path class="st0" d="M45.3,9.4c-4.2-3.7-10.6-5.5-19-5.5H3.2v66.8h18V48.5h5.1c8.1,0,14.4-2,18.8-6.1c4.4-4.1,6.6-9.8,6.6-17.3
+
+            <path class="st0" d="M170.7,9c-0.9-0.6-1.8-1.2-2.8-1.7c-2.4-1.3-5-2.3-7.7-3c-2.7-0.7-5.6-1.1-8.5-1.1c-8.8,0-16.8,3.4-22.9,8.8
+                c-0.4,0.4-0.8,0.7-1.2,1.1c-6.2,6.1-10,14.7-10,24.1c0,9.4,3.8,17.9,10,24.1c0.4,0.4,0.8,0.8,1.2,1.1c6,5.5,14.1,8.8,22.9,8.8
+                c2.9,0,5.8-0.4,8.5-1.1c2.7-0.7,5.3-1.7,7.7-3c1-0.5,1.9-1.1,2.8-1.7c9-6.1,15-16.5,15-28.2S179.8,15.1,170.7,9z M151.7,56.2
+                c-10.5,0-19-8.5-19-19s8.5-19,19-19c10.5,0,19,8.5,19,19S162.2,56.2,151.7,56.2z"/>
+            <path class="st0" d="M45.3,9.4c-4.2-3.7-10.6-5.5-19-5.5H3.2v66.8h18V48.5h5.1c8.1,0,14.4-2,18.8-6.1c4.4-4.1,6.6-9.8,6.6-17.3
 				C51.7,18.3,49.6,13,45.3,9.4z M31,31.5c-1.6,1.5-3.8,2.3-6.5,2.3h-3.3V18.4h4.7c5,0,7.5,2.3,7.5,6.8C33.4,27.8,32.6,29.9,31,31.5
 				z"/>
 		</g>
@@ -90,8 +100,4 @@
 			h1.9V86.7z"/>
 	</g>
 </g>
-<path class="st0" d="M170.7,9c-0.9-0.6-1.8-1.2-2.8-1.7c-2.4-1.3-5-2.3-7.7-3c-2.7-0.7-5.6-1.1-8.5-1.1c-8.8,0-16.8,3.4-22.9,8.8
-	c-0.4,0.4-0.8,0.7-1.2,1.1c-6.2,6.1-10,14.7-10,24.1c0,9.4,3.8,17.9,10,24.1c0.4,0.4,0.8,0.8,1.2,1.1c6,5.5,14.1,8.8,22.9,8.8
-	c2.9,0,5.8-0.4,8.5-1.1c2.7-0.7,5.3-1.7,7.7-3c1-0.5,1.9-1.1,2.8-1.7c9-6.1,15-16.5,15-28.2S179.8,15.1,170.7,9z M151.7,56.2
-	c-10.5,0-19-8.5-19-19s8.5-19,19-19c10.5,0,19,8.5,19,19S162.2,56.2,151.7,56.2z"/>
 </svg>
