TSP-72 Add more realistic nav menu items

--- a/source/_patterns/02-molecules/navigation/00-primary-nav.twig
+++ b/source/_patterns/02-molecules/navigation/00-primary-nav.twig
@@ -1,8 +1,17 @@
 <nav id="nav">
-	<ul class="list-none flex items-center text-white">
-		<li class="mx-2"><a href="{{ url }}">Home</a></li>
-		<li class="mx-2"><a href="{{ url }}">About</a></li>
-		<li class="mx-2"><a href="{{ url }}">Blog</a></li>
-		<li class="mx-2"><a href="{{ url }}">Contact</a></li>
-	</ul>
-</nav><!--end .nav-->
+  <ul class="list-none flex flex-wrap items-center -mx-2">
+    <li class="mx-2">
+      <a href="{{ url }}">Home</a>
+    </li>
+    <li class="mx-2">
+      <a href="{{ url }}">Streets</a>
+    </li>
+    <li class="mx-2">
+      <a href="{{ url }}">Text</a>
+    </li>
+    <li class="mx-2">
+      <a href="{{ url }}">Help</a>
+    </li>
+  </ul>
+</nav>
+<!--end .nav-->
