TSP-72 Add padding all around header for mobile

--- a/source/_patterns/03-cells/header/header.twig
+++ b/source/_patterns/03-cells/header/header.twig
@@ -1,4 +1,4 @@
-<header class="flex items-center text-black px-2 h-16 border-black border-b" role="banner">
+<header class="flex flex-wrap items-center text-black p-2 lg:h-16 border-black border-b" role="banner">
   {% set logo %}
   {% include "@atoms/04-images/00-logo.twig" with {
 			"classes": [
