--- a/source/_patterns/_index.scss
+++ b/source/_patterns/_index.scss
@@ -1,5 +1,6 @@
 @tailwind base;
 @tailwind components;
-@import "./00-particles/_index.scss";
-@import "./01-atoms/_index.scss";
+@import './00-particles/_index.scss';
+@import './01-atoms/_index.scss';
+@import './03-cells/_index.scss';
 @tailwind utilities;
