TSP-53 Center the text and position at top

--- a/source/_patterns/03-cells/landing/tsp-landing-page-hero.twig
+++ b/source/_patterns/03-cells/landing/tsp-landing-page-hero.twig
@@ -1,8 +1,8 @@
 {% include "@cells/header/header.twig" %}
 <main>
   <div class="hero-image h-screen-32">
-    <div class="hero-text w-full md:w-3/ lg:w-1/2 px-2">
-      <h1>Welcome to Portland 2035</h1>
+    <div class="w-full md:w-3/ lg:w-1/2 px-2 pt-6 mx-auto text-white">
+      <h1 class="text-center">Welcome to Portland in the year 2035</h1>
       {% embed "@cells/_two-columns.twig" %}
         {% block first %}
           {% include "@molecules/button.twig" with {
