TSP-64 Add block placeholder

--- a/source/_patterns/04-organisms/street/street-app.twig
+++ b/source/_patterns/04-organisms/street/street-app.twig
@@ -19,6 +19,7 @@
       {% include "@organisms/street/street-listing.twig" with {
           'id': street.id,
           'name': street.name,
+          'block': 1000,
           'classification': street.classification,
           'projects': street.projects
       } %}
