--- a/source/_patterns/04-organisms/street/street-listing.twig
+++ b/source/_patterns/04-organisms/street/street-listing.twig
@@ -3,6 +3,8 @@
  } %}
 <article>
   <h1>{{ name }}</h1>
+  <p>{{ block }}
+    block</p>
   <dl>
     <div class="flex flex-wrap items-center mb-3">
       <dt class="font-bold">Transportation planning ID:</dt>
