TSP-53 Add YouTube video, fix screen height sizes vh units work with new pattern lab version

--- a/source/_patterns/03-cells/landing/tsp-landing-page-hero-alt.twig
+++ b/source/_patterns/03-cells/landing/tsp-landing-page-hero-alt.twig
@@ -51,7 +51,7 @@
     </ul>
   </section>
   <section class="bg-cyan-500">
-    <img class="mx-auto" src="../../images/mode-share-diagram.png"/>
+    <iframe class="w-full h-screen-56" src="https://www.youtube.com/embed/qYlcbgRlYVE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </section>
   <section class="container px-2 py-3 mx-auto">
     <h3>Using the TSP Digital Document</h3>
