--- a/source/_patterns/04-organisms/street/street-app.twig
+++ b/source/_patterns/04-organisms/street/street-app.twig
@@ -1,5 +1,5 @@
 <main>
-    {% embed "@cells/_two-columns.twig" with {
+  {% embed "@cells/_two-columns.twig" with {
         'firstClasses' : [
             "w-full",
             "md:w-1/3",
@@ -15,8 +15,9 @@
             "lg:h-screen",
         ],
     } only %}
-        {% block first %}
-            {% include "@organisms/street/street-listing.twig" with {
+    {% block first %}
+      {% include "@organisms/address-search/address-search.twig" %}
+      {% include "@organisms/street/street-listing.twig" with {
                 "candidates": [
                     {
                         "name": "SW MAIN ST",
@@ -27,13 +28,13 @@
                     }
                 ]
             } %}
-        {% endblock %}
-        {% block second %}
-            {% include "@cells/classification/classification-map.twig" with {
+    {% endblock %}
+    {% block second %}
+      {% include "@cells/classification/classification-map.twig" with {
                 "classes": [
-                    "h-full",
+                    "h-screen",
                 ]
             } %}
-        {% endblock %}
-    {% endembed %}
+    {% endblock %}
+  {% endembed %}
 </main>
