--- a/source/_patterns/04-organisms/street/street-app.twig
+++ b/source/_patterns/04-organisms/street/street-app.twig
@@ -4,19 +4,22 @@
         'firstClasses' : [
             "w-full",
             "md:w-1/3",
+            "lg:h-screen",
             "p-2",
-            "lg:-h-16",
             "overflow-y-auto"
         ],
         'secondClasses' : [
             "w-full",
+            "h-screen-50",
+            "lg:h-full",
             "lg:flex-1",
-            "h-screen-68",
-            "lg:-h-16",
         ],
     } %}
     {% block first %}
       {% include "@organisms/address-search/address-search.twig" %}
+      <div class="my-1">
+        {% include "@molecules/navigation/pagination.twig" %}
+      </div>
       {% include "@organisms/street/street-listing.twig" with {
           'id': street.id,
           'name': street.name,
@@ -34,3 +37,4 @@
     {% endblock %}
   {% endembed %}
 </main>
+{% include "@cells/footer/footer.twig" %}
