--- a/source/_patterns/_index.scss
+++ b/source/_patterns/_index.scss
@@ -1,5 +1,6 @@
 @tailwind base;
 @tailwind components;
+@tailwind utilities;
 @import "./00-particles/_index.scss";
 @import "./01-atoms/_index.scss";
-@tailwind utilities;
+@import "./04-organisms/_index.scss";
