TSP-64 Remove flex from app container

--- a/source/_patterns/04-organisms/street/street-app.twig
+++ b/source/_patterns/04-organisms/street/street-app.twig
@@ -1,5 +1,5 @@
 {% include "@cells/header/header.twig" %}
-<main class="flex flex-wrap">
+<main>
   {% embed "@cells/_two-columns.twig" with {
         'firstClasses' : [
             "w-full",
