TSP-64 Make fonts asmaller generally

--- a/source/_patterns/00-particles/typography/00-headings.scss
+++ b/source/_patterns/00-particles/typography/00-headings.scss
@@ -1,49 +1,23 @@
 h1 {
-  @apply text-4xl mb-6;
+  @apply text-3xl mb-6;
 }
 
 h2 {
-  @apply text-3xl mb-5;
+  @apply text-2xl mb-5;
 }
 
 h3 {
-  @apply text-2xl mb-4;
+  @apply text-xl mb-4;
 }
 
 h4 {
-  @apply text-xl mb-3;
+  @apply text-lg mb-3;
 }
 
 h5 {
-  @apply text-lg mb-2;
+  @apply text-base mb-2;
 }
 
 h6 {
-  @apply text-base mb-1;
-}
-
-@screen md {
-  h1 {
-    @apply text-5xl mb-6;
-  }
-
-  h2 {
-    @apply text-4xl mb-5;
-  }
-
-  h3 {
-    @apply text-3xl mb-4;
-  }
-
-  h4 {
-    @apply text-2xl mb-3;
-  }
-
-  h5 {
-    @apply text-xl mb-2;
-  }
-
-  h6 {
-    @apply text-lg mb-1;
-  }
+  @apply text-sm mb-1;
 }
