--- a/source/_patterns/04-organisms/street/street-app.twig
+++ b/source/_patterns/04-organisms/street/street-app.twig
@@ -1,20 +1,25 @@
 {% include "@cells/header/header.twig" %}
 <main>
   {% embed "@cells/_two-columns.twig" with {
-        'firstClasses' : [
-            "w-full",
-            "md:w-1/3",
-            "lg:h-screen",
-            "p-2",
-            "overflow-y-auto"
-        ],
-        'secondClasses' : [
-            "w-full",
-            "h-screen-50",
-            "lg:h-full",
-            "lg:flex-1",
-        ],
-    } %}
+    wrapperClasses: [
+        "flex",
+        "flex-col",
+        "lg:flex-row",
+    ],
+    'firstClasses' : [
+        "w-full",
+        "md:w-1/3",
+        "lg:h-screen",
+        "p-2",
+        "overflow-y-auto"
+    ],
+    'secondClasses' : [
+        "w-full",
+        "h-screen-50",
+        "lg:h-full",
+        "lg:flex-1",
+    ],
+  } %}
     {% block first %}
       {% include "@organisms/address-search/address-search.twig" %}
       <div class="my-1">
