--- a/source/_patterns/04-organisms/landing/tsp-landing-page-hero.twig
+++ b/source/_patterns/04-organisms/landing/tsp-landing-page-hero.twig
@@ -1,6 +1,6 @@
 {% include "@cells/header/header.twig" %}
 <main>
-  <div class="hero-image h-screen-56">
+  <div class="hero-image h-screen-68">
     <div class="w-full md:w-3/ lg:w-1/2 px-2 pt-6 mx-auto text-white">
       <h1 class="text-center">Welcome to Portland in the year 2035</h1>
       {% embed "@cells/_two-columns.twig" %}
@@ -51,7 +51,7 @@
     </ul>
   </section>
   <section class="bg-cyan-500">
-    <iframe class="w-full h-screen-56" src="https://www.youtube.com/embed/qYlcbgRlYVE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="w-full h-screen-68" src="https://www.youtube.com/embed/qYlcbgRlYVE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </section>
   <section class="container px-2 py-3 mx-auto">
     <h3>Using the TSP Digital Document</h3>
@@ -61,3 +61,4 @@
     </p>
   </section>
 </main>
+{% include "@cells/footer/footer.twig" %}
