--- a/source/_patterns/_index.scss
+++ b/source/_patterns/_index.scss
@@ -3,4 +3,5 @@
 @tailwind utilities;
 @import "./00-particles/_index.scss";
 @import "./01-atoms/_index.scss";
+@import "./03-cells/_index.scss";
 @import "./04-organisms/_index.scss";
