TSP-66 Clean up pattern refactors

--- a/source/_patterns/01-atoms/03-lists/00-unordered.scss
+++ b/source/_patterns/01-atoms/03-lists/00-unordered.scss
@@ -1,7 +1,6 @@
 ul {
-    @apply list-disc list-inside;
-    
-    ul {
-        @apply ml-4;
-    }
+  @apply list-disc list-outside pl-6;
+  ul {
+    @apply pl-6;
+  }
 }
