--- a/source/_patterns/01-atoms/03-lists/01-ordered.scss
+++ b/source/_patterns/01-atoms/03-lists/01-ordered.scss
@@ -1,7 +1,6 @@
 ol {
-    @apply list-decimal list-inside;
-
-    ol {
-        @apply ml-4;
-    }
+  @apply list-decimal list-outside pl-6;
+  ol {
+    @apply pl-6;
+  }
 }
