--- a/source/_patterns/02-molecules/navigation/footer-navigation.twig
+++ b/source/_patterns/02-molecules/navigation/footer-navigation.twig
@@ -1,5 +1,5 @@
 <nav id="nav">
-  <ul class="list-none flex flex-wrap items-center -mx-2">
+  <ul class="list-none flex flex-wrap items-center p-0 -mx-2">
     <li class="mx-2">
       <a href="{{ url }}">Support</a>
     </li>
