--- a/source/_patterns/03-cells/header/header.twig
+++ b/source/_patterns/03-cells/header/header.twig
@@ -1,6 +1,6 @@
 <header class="flex flex-wrap items-center text-black p-2 lg:h-16 border-black border-b" role="banner">
   {% set logo %}
-  {% include "@atoms/04-images/00-logo.twig" with {
+  {% include "@atoms/04-images/logo.twig" with {
 			"classes": [
 				"w-24"
 			]
