--- a/source/_patterns/00-particles/typography/01-fonts.scss
+++ b/source/_patterns/00-particles/typography/01-fonts.scss
@@ -1,13 +1,13 @@
 /* Google Fonts */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,700,800");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,700,800');
 
 body {
-  @apply font-sans text-base text-black;
+  @apply font-sans text-sm text-black;
 }
 
 @screen md {
   body {
-    @apply text-lg;
+    @apply text-base;
   }
 }
 
