TSP-69 Update borders to frame app

--- a/source/_patterns/03-cells/footer/footer.twig
+++ b/source/_patterns/03-cells/footer/footer.twig
@@ -1,4 +1,4 @@
-<footer class="flex flex-wrap items-center justify-between bg-gray-300 text-black p-2 border-black border-b" role="banner">
+<footer class="flex flex-wrap items-center justify-between bg-gray-300 text-black p-2 border-black border-t" role="banner">
   {% set logo %}
   {% include "@atoms/04-images/pbotapps-logo.twig" with {
 			"classes": [
