--- a/source/_patterns/01-atoms/02-text/links.scss
+++ b/source/_patterns/01-atoms/02-text/links.scss
@@ -1,7 +1,7 @@
 a {
     @apply no-underline text-inherit border-b-2 border-current;
     &:focus {
-        @apply border-2;
+        @apply p-1 border-2;
     }
     &.button {
         @apply mx-1;
