--- a/source/_patterns/04-organisms/street/street-app.twig
+++ b/source/_patterns/04-organisms/street/street-app.twig
@@ -3,25 +3,29 @@
   {% embed "@cells/_two-columns.twig" with {
     wrapperClasses: [
         "flex",
-        "flex-col",
-        "lg:flex-row",
+        "flex-col-reverse",
+        "md:flex-row",
     ],
     'firstClasses' : [
         "w-full",
         "md:w-1/3",
-        "lg:h-screen",
+        "md:h-screen",
         "p-2",
-        "overflow-y-auto"
+        "overflow-y-auto",
+        "border-t",
+        "md:border-r",
+        "md:border-t-0",
+        "border-black",
     ],
     'secondClasses' : [
         "w-full",
         "h-screen-50",
-        "lg:h-screen",
-        "lg:flex-1",
+        "md:h-screen",
+        "md:flex-1",
     ],
   } %}
     {% block first %}
-      {% include "@organisms/address-search/address-search.twig" %}
+      {% include "@organisms/address-search/address-search-app.twig" %}
       <div class="my-3">
         {% include "@atoms/02-text/_link.twig" with {
           url: '#',
@@ -38,7 +42,11 @@
       } %}
     {% endblock %}
     {% block second %}
-      {% include "@cells/classification/classification-map.twig" %}
+      {% include "@cells/classification/classification-map.twig" with {
+        classes: [
+          "h-full"
+        ],
+      } %}
     {% endblock %}
   {% endembed %}
 </main>
