--- a/source/_patterns/04-organisms/street/street-app.twig
+++ b/source/_patterns/04-organisms/street/street-app.twig
@@ -1,53 +1,1 @@
-{% include "@cells/header/header.twig" %}
-<main>
-  {% embed "@cells/_two-columns.twig" with {
-    wrapperClasses: [
-        "flex",
-        "flex-col-reverse",
-        "md:flex-row",
-    ],
-    'firstClasses' : [
-        "w-full",
-        "md:w-1/3",
-        "md:h-screen",
-        "p-2",
-        "overflow-y-auto",
-        "border-t",
-        "md:border-r",
-        "md:border-t-0",
-        "border-black",
-    ],
-    'secondClasses' : [
-        "w-full",
-        "h-screen-50",
-        "md:h-screen",
-        "md:flex-1",
-    ],
-  } %}
-    {% block first %}
-      {% include "@organisms/address-search/address-search-app.twig" %}
-      <div class="my-3">
-        {% include "@atoms/02-text/_link.twig" with {
-          url: '#',
-          classes: '',
-          content: 'Back to results'
-        } %}
-      </div>
-      {% include "@organisms/street/street-listing.twig" with {
-          'id': street.id,
-          'name': street.name,
-          'block': 1000,
-          'classification': street.classification,
-          'projects': street.projects
-      } %}
-    {% endblock %}
-    {% block second %}
-      {% include "@cells/classification/classification-map.twig" with {
-        classes: [
-          "h-full"
-        ],
-      } %}
-    {% endblock %}
-  {% endembed %}
-</main>
-{% include "@cells/footer/footer.twig" %}
+<div id="streets-appid"></div>
