--- a/source/_patterns/04-organisms/plan/plan.twig
+++ b/source/_patterns/04-organisms/plan/plan.twig
@@ -1,22 +1,13 @@
 {% include "@cells/header/header.twig" %}
+
 <main
-	class="container mx-auto my-4 px-2">
-	<header>
-		<h1
-			class="text-4xl pb-3 border-b border-black">{{ chapters[0].name }}</h1>
-	</header>
-	<section
-		class="flex flex-col-reverse md:flex-row">
-		<article
-			class="w-full md:w-2/3 pr-2">
-			{{ chapters[0].content }}
-		</article>
-		<aside
-			class="w-full md:w-1/3 pl-2">
-			<ol
-				class="list-none p-0 m-0 bg-fog-400 sticky top-10">
-				{% for index, chapter in chapters %}
-					{% set classes = [
+  class="container mx-auto my-4 px-2">
+  <nav
+    class="block md:hidden">
+    <ol
+      class="list-none p-0">
+      {% for index, chapter in chapters %}
+        {% set classes = [
             'flex',
             'items-center',
             'w-full',
@@ -26,40 +17,101 @@
             index == 0 ? 'text-white',
             index != 0 ? 'hover:bg-blue-100',
           ] %}
-					<li
-						role="button"
-						tabindex="0"
-						class="border-b focus:border-2">
-						<a
-							href="#"
-							class="{{ classes|join(' ') }}">
-							<span
-								class="mr-3 px-3 py-1 border rounded-full">{{ chapter.number }}</span>
-							<span>{{ chapter.name }}</span>
-						</a>
-						{% if chapter.sections is not empty %}
-							<ol
-								class="list-none p-0 m-0 bg-white">
-								{% for index, section in chapter.sections %}
-									<li
-										role="button"
-										tabindex="0"
-										class="border-b focus:border-2">
-										<a
-											href="#{{ section.id }}"
-											class="{{ ['flex', 'items-center', 'w-full', 'p-2', 'border-0']|join(' ') }}">
-											<span
-												class="mr-3 px-3 py-1 border rounded-full">{{ chapter.number }}.{{ section.number }}</span>
-											<span>{{ section.name }}</span>
-										</a>
-									</li>
-								{% endfor %}
-							</ol>
-						{% endif %}
-					</li>
-				{% endfor %}
-			</ol>
-		</aside>
-	</section>
+        <li
+          role="button"
+          tabindex="0"
+          class="my-2">
+          <a
+            href="#"
+            class="border-0 text-fog-800 hover:text-blue-800">
+            <span
+              class="font-bold">{{ chapter.name }}</span>
+          </a>
+          {% if chapter.sections is not empty %}
+            <ol
+              class="list-none">
+              {% for index, section in chapter.sections %}
+                <li
+                  role="button"
+                  tabindex="0"
+                  class="my-2">
+                  <a
+                    href="#{{ section.id }}"
+                    class="border-0 text-fog-800 hover:text-blue-800">
+
+                    <span>{{ section.name }}</span>
+                  </a>
+                </li>
+              {% endfor %}
+            </ol>
+          {% endif %}
+        </li>
+      {% endfor %}
+    </ol>
+  </nav>
+  <section>
+    <header>
+      <h1
+        class="text-4xl pb-3 border-b border-black">{{ chapters[0].name }}</h1>
+    </header>
+    <section
+      class="flex flex-col-reverse md:flex-row justify-between">
+      <article
+        class="w-full md:w-2/3 pr-2">
+        {% for index, chapter in chapters %}
+          {% if chapter.content %}
+            {{ chapter.content }}
+          {% endif %}
+        {% endfor %}
+      </article>
+      <nav
+        class="hidden md:block overflow-y-auto sticky top-10 max-h-(screen-16)">
+        <ol
+          class="list-none p-0">
+          {% for index, chapter in chapters %}
+            {% set classes = [
+            'flex',
+            'items-center',
+            'w-full',
+            'p-2',
+            'border-0',
+            index == 0 ? 'bg-blue-500',
+            index == 0 ? 'text-white',
+            index != 0 ? 'hover:bg-blue-100',
+          ] %}
+            <li
+              role="button"
+              tabindex="0"
+              class="my-2">
+              <a
+                href="#"
+                class="border-0 text-fog-800 hover:text-blue-800">
+                <span
+                  class="font-bold">{{ chapter.name }}</span>
+              </a>
+              {% if chapter.sections is not empty %}
+                <ol
+                  class="list-none">
+                  {% for index, section in chapter.sections %}
+                    <li
+                      role="button"
+                      tabindex="0"
+                      class="my-2">
+                      <a
+                        href="#{{ section.id }}"
+                        class="border-0 text-fog-800 hover:text-blue-800">
+
+                        <span>{{ section.name }}</span>
+                      </a>
+                    </li>
+                  {% endfor %}
+                </ol>
+              {% endif %}
+            </li>
+          {% endfor %}
+        </ol>
+      </nav>
+    </section>
+  </section>
 </main>
 {% include "@cells/footer/footer.twig" %}
