TSP-81 Update plan organisms for section structure

--- a/source/_patterns/04-organisms/plan/plan.scss
+++ b/source/_patterns/04-organisms/plan/plan.scss
@@ -2,6 +2,12 @@
   .translate-r-2px {
     transform: translateX(2px) !important;
   }
+  .translate-t-2px {
+    transform: translateY(-2px) !important;
+  }
+  .translate-tr-2px {
+    transform: translateX(2px) translateY(-2px) !important;
+  }
   .transition-fast {
     transition: all .2s ease !important;
   }
